2014-09-17  Reuben Thomas  <rrt@sc3d.org>

	* progmodes/js.el: Add interpreter-mode-alist support for various
	JavaScript interpreters.

2014-09-17  Paul Eggert  <eggert@cs.ucla.edu>

	Don't assume 'grep' supports GREP_OPTIONS.
	The GREP_OPTIONS environment variable is planned to be marked
	obsolescent in GNU grep, due to problems in its use, so stop
	relying on it.
	* progmodes/grep.el (grep-highlight-matches): Document this.
	(grep-process-setup): Do not set GREP_OPTIONS.
	(grep-compute-defaults): Use an explicit --color option if supported.

2014-09-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* msb.el (msb--make-keymap-menu, msb-menu-bar-update-buffers):
	Don't add outdated key-shortcut cache (bug#18482).

2014-09-15  Glenn Morris  <rgm@gnu.org>

	* image.el (image-multi-frame-p): Fix thinko - do not force
	a delay if none was specified.  (Bug#18334)

2014-09-15  Kan-Ru Chen  <kanru@kanru.info>

	* window.el (fit-window-to-buffer): Doc fix.

2014-09-15  Ivan Shmakov  <ivan@siamics.net>  (tiny change)

	* desktop.el (desktop-create-buffer): Check that buffers are still live
	before burying them (bug#18373).

2014-09-15  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-list-entries):
	Restore 24.3 display behavior.  (Bug#18381)

2014-09-15  Eli Zaretskii  <eliz@gnu.org>

	* mouse.el (mouse-drag-line): On text-mode frames, count the mode
	line and header line as 1 pixel.  This fixes the 1-"pixel" (row)
	discrepancy between window-pixel-edges and mouse events, and
	avoids moving mode line up when the mouse click is on the modeline
	and no drag is attempted.

2014-09-14  Daniel Colascione  <dancol@dancol.org>

	* register.el (insert-register): Change default interactive
	insertion mode.

2014-09-14  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-cache.el (tramp-flush-file-function): Simplify check.
	Suppress debug messages.

	* net/tramp.el (tramp-file-name-handler):
	* net/tramp-gvfs.el (tramp-gvfs-url-file-name): Apply `cons' where